2007-05-17  Ethan Merritt  <merritt@u.washington.edu>

	* src/win/wgraph.c (GraphClose) src/wxterminal/wxt_gui.cpp (OnClose):
	Pass window close event through to event_reset(). x11 already did this.

	* src/mouse.c (event_reset): Dummy up a keystroke event containing a
	synthetic keystroke GP_Cancel.  Pass this through to event_keypress()
	so that it will check for a user-specified binding to the window close
	event.

	* src/mouse.h src/mousecmn.h: Define the synthetic keystroke CP_Cancel.

	* docs/gnuplot.doc: Document that you can now bind a window close
	event just as you would a real key:    bind Close 'print "\n\nAyiii!\n"'

2007-05-16  Ethan Merritt  <merritt@u.washington.edu>

	* src/plot2d.c (get_data) src/graphics.c (plot_lines):
	Allow 2D plots "with lines lc rgb variable".  This capability already
	exists for points, dots, labels, impulses.
	Bug #1720032

2007-05-16  Timothee Lecomte  <timothee.lecomte@ens.fr>

	* src/plot.c (main): Properly reset Readline when we come back from
	the SIGINT handler calling longjmp. This avoids having the line
	edition all broken in that precise situation (arrow keys will work
	instead of giving '^[[A' for example)

2007-05-16  Daniel Sebald  <daniel.sebald@ieee.org>

	* src/gplt_x11.c (image creation): Adjust image line pad according to
	image data width in XCreateImage().  Bug #1716389.

2007-05-15  Ethan Merritt  <merritt@u.washington.edu>

	* src/gplt_x11.c (image creation): Add an error check for allocation of
	storage via XCreateImage().

2007-05-14  Ethan Merritt  <merritt@u.washington.edu>

	* src/datafile.c (df_set_key_title): When a key title is loaded
	from a datafile columnheader, apply or don't apply enhanced text
	processing based on the setting of "set key {no}enhanced".
	Bug #1712560

	* demo/histograms.dem demo/histograms2.dem: This change affects the
	histogram demo, because some column headers contain an underscore.
	Add an explicit "set key noenhanced".
